[gd_scene load_steps=2 format=3 uid="uid://role_intro_ui"]

[ext_resource type="Script" path="res://Scripts/UI/role_ui_online.gd" id="1_script"]

[node name="RoleIntroUI" type="CanvasLayer"]
layer = 50
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="Container" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 80.0
offset_right = -100.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="LeftPanel" type="Panel" parent="Container"]
custom_minimum_size = Vector2(400, 0)
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4

[node name="SpriteContainer" type="Control" parent="Container/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerSprite" type="AnimatedSprite2D" parent="Container/LeftPanel/SpriteContainer"]
scale = Vector2(1.5, 1.5)
centered = true

[node name="RightPanel" type="Panel" parent="Container"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.6

[node name="VBox" type="VBoxContainer" parent="Container/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = 30.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="RoleTitle" type="Label" parent="Container/RightPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "角色名称"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Container/RightPanel/VBox"]
layout_mode = 2

[node name="RoleDescription" type="RichTextLabel" parent="Container/RightPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "角色说明..."

[node name="CountdownLabel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -80.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 36
text = "游戏将在 X 秒后开始"
horizontal_alignment = 1

