extends CanvasLayer
class_name RoleUIOnline

## è§’è‰²è¯´æ˜Ž UI
## æ˜¾ç¤ºçŽ©å®¶è¢«åˆ†é…çš„è§’è‰²ä¿¡æ¯å’Œä»»åŠ¡è¯´æ˜Ž

signal intro_finished  # ä»‹ç»ç»“æŸä¿¡å·

const INTRO_COUNTDOWN := 10  # è§’è‰²ä»‹ç»å€’è®¡æ—¶ç§’æ•°

## è§’è‰²è¯´æ˜Žæ–‡æœ¬
const ROLE_DESCRIPTIONS := {
	"boss": {
		"title": "ðŸ‘¹ Boss",
		"color": Color(0.9, 0.2, 0.2),
		"description": """ä½ æ˜¯ Bossï¼

ã€ç›®æ ‡ã€‘
é˜»æ­¢ Player å’Œ Impostor å®Œæˆç›®æ ‡ï¼Œ
æˆ–åœ¨ 20 æ³¢å†…æ€æ­»æ‰€æœ‰äººï¼

ã€èƒ½åŠ›ã€‘
â€¢ é¼ æ ‡å·¦é”®ï¼šå†²æ’žæ”»å‡»ï¼Œå¯¹æŽ¥è§¦çš„çŽ©å®¶é€ æˆä¼¤å®³
â€¢ ç§»åŠ¨é€Ÿåº¦æ¯”æ™®é€šçŽ©å®¶å¿«
â€¢ ä¸ä¼šè¢«æ€ªç‰©æ”»å‡»

ã€æç¤ºã€‘
è¿½è¸ªè½å•çš„çŽ©å®¶ï¼Œåˆ©ç”¨å†²æ’žé€ æˆä¼¤å®³ï¼
åœ¨å…³é”®æ—¶åˆ»æ‰“æ–­ä»–ä»¬çš„æˆ˜æ–—ï¼"""
	},
	"impostor": {
		"title": "ðŸŽ­ Impostor",
		"color": Color(0.8, 0.6, 0.2),
		"description": """ä½ æ˜¯ Impostorï¼

ã€ç›®æ ‡ã€‘
ç‹¬è‡ªå‡»æ€ 20 æ³¢æ€ªç‰©ï¼Œé˜»æ­¢ Player å®Œæˆç›®æ ‡ï¼
ä½ éœ€è¦åœ¨åˆé€‚æ—¶æœºå›å˜ï¼Œæˆä¸ºæœ€åŽçš„èµ¢å®¶ã€‚

ã€èƒ½åŠ›ã€‘
â€¢ ä¸Žæ™®é€šçŽ©å®¶ç›¸åŒçš„æˆ˜æ–—èƒ½åŠ›
â€¢ æŒ‰ B é”®å¯ä»¥å›å˜ï¼ˆä¸å¯æ’¤é”€ï¼‰
â€¢ å›å˜åŽå¯ä»¥æ”»å‡»å…¶ä»– Player

ã€æç¤ºã€‘
å‰æœŸå‡è£…åˆä½œï¼ŒåŽæœŸå›å˜æŠ¢å¤ºèƒœåˆ©ï¼
å°å¿ƒ Boss çš„æ”»å‡»ï¼"""
	},
	"player": {
		"title": "ðŸŽ® Player",
		"color": Color(0.2, 0.7, 0.9),
		"description": """ä½ æ˜¯ Playerï¼

ã€ç›®æ ‡ã€‘
ä¸Žé˜Ÿå‹åˆä½œï¼Œæ”¶é›†é’¥åŒ™ï¼Œå‡»æ€ 20 æ³¢æ€ªç‰©ï¼
å°å¿ƒ Boss å’Œæ½œåœ¨çš„ Impostorï¼

ã€èƒ½åŠ›ã€‘
â€¢ æ”»å‡»æ€ªç‰©èŽ·å–é’¥åŒ™æŽ‰è½
â€¢ ä½¿ç”¨æŠ€èƒ½å‡»è´¥æ•Œäºº
â€¢ ä¸Žé˜Ÿå‹é…åˆç”Ÿå­˜

ã€æç¤ºã€‘
æ³¨æ„è§‚å¯Ÿé˜Ÿå‹çš„è¡Œä¸ºï¼ŒImpostor å¯èƒ½éšæ—¶å›å˜ï¼
ä¿æŒè­¦æƒ•ï¼Œèº²é¿ Boss çš„æ”»å‡»ï¼"""
	}
}

var countdown_timer: float = 0.0
var is_counting: bool = false

@onready var bg: ColorRect = $Background
@onready var container: HBoxContainer = $Container
@onready var left_panel: Panel = $Container/LeftPanel
@onready var right_panel: Panel = $Container/RightPanel
@onready var sprite_container: Control = $Container/LeftPanel/SpriteContainer
@onready var player_sprite: AnimatedSprite2D = $Container/LeftPanel/SpriteContainer/PlayerSprite
@onready var role_title: Label = $Container/RightPanel/VBox/RoleTitle
@onready var role_description: RichTextLabel = $Container/RightPanel/VBox/RoleDescription
@onready var countdown_label: Label = $CountdownLabel


func _ready() -> void:
	hide()


func _process(delta: float) -> void:
	if is_counting:
		countdown_timer -= delta
		if countdown_timer <= 0:
			is_counting = false
			_on_intro_finished()
		else:
			_update_countdown_display()


## æ˜¾ç¤ºè§’è‰²ä»‹ç»
func show_role_intro(role_id: String, sprite_frames: SpriteFrames) -> void:
	print("[RoleIntroUI] æ˜¾ç¤ºè§’è‰²ä»‹ç»: role=%s" % role_id)
	
	# è®¾ç½®è§’è‰²åŠ¨ç”»
	if sprite_frames and player_sprite:
		player_sprite.sprite_frames = sprite_frames
		player_sprite.play("default")
		player_sprite.scale = Vector2(1.5, 1.5)  # é€‚ä¸­æ”¾å¤§æ˜¾ç¤º
	
	# æ˜¾ç¤º UI åŽå†è®¾ç½®ä½ç½®ï¼ˆç¡®ä¿å¸ƒå±€å·²è®¡ç®—ï¼‰
	show()
	
	# ç­‰å¾…å¸ƒå±€è®¡ç®—å®ŒæˆåŽå±…ä¸­è§’è‰²
	await get_tree().process_frame
	await get_tree().process_frame
	
	# ä½¿ç”¨ left_panel çš„å…¨å±€ä½ç½®å’Œå¤§å°æ¥è®¡ç®—è§’è‰²çš„å±…ä¸­ä½ç½®
	if left_panel and player_sprite:
		var panel_rect = left_panel.get_global_rect()
		var center_pos = panel_rect.position + panel_rect.size / 2
		player_sprite.global_position = center_pos
		print("[RoleIntroUI] é¢æ¿å…¨å±€çŸ©å½¢: %s, è§’è‰²å…¨å±€ä½ç½®: %s" % [panel_rect, player_sprite.global_position])
	
	# è®¾ç½®è§’è‰²è¯´æ˜Ž
	var role_data = ROLE_DESCRIPTIONS.get(role_id, ROLE_DESCRIPTIONS["player"])
	
	if role_title:
		role_title.text = role_data["title"]
		role_title.add_theme_color_override("font_color", role_data["color"])
	
	if role_description:
		role_description.text = role_data["description"]


## å¼€å§‹å€’è®¡æ—¶ï¼ˆç”±æœåŠ¡å™¨åŒæ­¥è°ƒç”¨ï¼‰
func start_countdown(seconds: int = INTRO_COUNTDOWN) -> void:
	countdown_timer = float(seconds)
	is_counting = true
	_update_countdown_display()
	print("[RoleIntroUI] å¼€å§‹å€’è®¡æ—¶: %d ç§’" % seconds)


## æ›´æ–°å€’è®¡æ—¶ï¼ˆç”±æœåŠ¡å™¨åŒæ­¥è°ƒç”¨ï¼‰
func update_countdown(seconds: int) -> void:
	countdown_timer = float(seconds)
	_update_countdown_display()


func _update_countdown_display() -> void:
	if countdown_label:
		var secs = int(ceil(countdown_timer))
		countdown_label.text = "æ¸¸æˆå°†åœ¨ %d ç§’åŽå¼€å§‹" % secs


func _on_intro_finished() -> void:
	print("[RoleIntroUI] è§’è‰²ä»‹ç»ç»“æŸ")
	intro_finished.emit()
	hide()


## å¼ºåˆ¶å…³é—­
func force_close() -> void:
	is_counting = false
	hide()
